RESOLVED FIXED247397
Setting the innerHTML of an SVG filter does not trigger a repaint for the target elements
https://bugs.webkit.org/show_bug.cgi?id=247397
Summary Setting the innerHTML of an SVG filter does not trigger a repaint for the tar...
Said Abou-Hallawa
Reported 2022-11-02 17:31:38 PDT
Created attachment 463373 [details] test case 1. Open the attached test case 2. Move the gamma slider control Expected: The color of the green box changes from dark green to white Result: The color of the green box does not change unless a repaint is forced, e.g. the window is resized.
Attachments
test case (1.32 KB, text/html)
2022-11-02 17:31 PDT, Said Abou-Hallawa
no flags
Said Abou-Hallawa
Comment 1 2022-11-02 17:32:04 PDT
Said Abou-Hallawa
Comment 2 2022-11-02 17:33:35 PDT
Taher
Comment 3 2026-03-16 10:27:34 PDT
EWS
Comment 4 2026-03-18 11:30:13 PDT
Committed 309495@main (18dd142a5ae7): <https://commits.webkit.org/309495@main> Reviewed commits have been landed. Closing PR #60705 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.