CSS filter referencing SVG filter not invalidated when filter content changes https://bugs.webkit.org/show_bug.cgi?id=247397 rdar://101870430

Reviewed by Said Abou-Hallawa.

When an SVG filter element's content is dynamically modified (via innerHTML),
elements using that filter through CSS `filter: url(#id)` don't visually update.

RenderLayerFilters caches the built CSSFilterRenderer and only rebuilds
it when geometry or compositing mode changes. Since a filter content
change doesn't alter geometry, the repaint reuses the stale cached filter.

The fix invalidates the cached CSSFilterRenderer when resource changes.

* LayoutTests/css3/filters/reference-filter-update-invalidates-cache-expected.html: Added.
* LayoutTests/css3/filters/reference-filter-update-invalidates-cache.html: Added.
* LayoutTests/css3/filters/reference-filter-update-to-invalid-expected.html: Added.
* LayoutTests/css3/filters/reference-filter-update-to-invalid.html: Added.
* LayoutTests/css3/filters/reference-filter-update-to-noop-expected.html: Added.
* LayoutTests/css3/filters/reference-filter-update-to-noop.html: Added.
* Source/WebCore/rendering/ReferencedSVGResources.cpp:
(WebCore::CSSSVGResourceElementClient::resourceChanged):
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects const):
* Source/WebCore/rendering/RenderLayer.h:

Canonical link: https://commits.webkit.org/309495@main